[package]
name = "maintenance-json"
version = "0.1.0"
authors = ["Vincent Vigneron <vigneron.vincent.49@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.106", features = ["derive"]}
serde_json = "1.0"
maintenance = {path = "../maintenance"}
bit-set = {version = "0.5"}
bit-vec = {version = "0.6"}
