[package]
name = "maintenance-server"
version = "0.1.0"
authors = ["Vincent Vigneron <vigneron.vincent.49@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
rocket_cors = "0.5.0"
rocket_contrib = {version = "0.4.5", default-features = false, features = ["json"]}
rocket-multipart-form-data = {version = "0.9.2"}
serde = {version = "1.0.106", features = ["derive"]}
serde_json = "1.0"
maintenance = {path = "../maintenance"}
maintenance-json = {path = "../maintenance-json"}
maintenance-capnproto = {path = "../maintenance-capnproto"}
uuid = {version="0.8.1", features = ["v4"] }
futures = "0.3"
